<resources>
    <string name="app_name">Hillforts</string>

    <!--User Strings-->
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Hillfort Description</string>
    <string name="clear_all_text">Clear All</string>
    <string name="visited_checkbox">Visited</string>
    <string name="hint_hillfortAdditional_notes">Additional Notes</string>

    <string name="menu_addHillfort">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_hillfortMaps">Maps</string>
    <string name="menu_favs">Favourites</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_search">Search</string>

    <string name="toast_hillfort_added">Hillfort Added!</string>
    <string name="toast_empty_fields">Please fill in ALL fields</string>
    <string name="toast_hillfort_not_added">Hillfort NOT added</string>
    <string name="toast_hillfort_not_changed">Update Cancelled</string>
    <string name="toast_hillfort_updated">Hillfort Updated</string>

    <string name="save_hillfort">Save Hillfort</string>

    <string name="button_addImage">Add Image</string>
    <string name="select_hillfort_image">Select Hillfort image</string>
    <string name="imageDesc">Selected Image</string>
    <string name="change_hillfort_image">Change Hillfort image</string>
    <string name="change_hillfort_location">Change Location</string>
    <string name="hillfort_card_rating_default">3</string>


    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>

    <string name="menu_deleteHillfort">Delete</string>

    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_confirmation">Are you sure you want to delete this Hillfort?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_deleted">Hillfort Deleted!</string>

    <string name="dialog_no_user_title">No User Found</string>
    <string name="dialog_no_user_message">No User was found</string>
    <string name="dialog_try_again">Try Again</string>
    <string name="dialog_sign_up">Sign Up</string>

    <string name="dialog_password_prompt_title">Re-Enter Password</string>
    <string name="dialog_password_prompt_password_hint">Password</string>
    <string name="dialog_password_prompt_submit">OK</string>
    <string name="dialog_password_prompt_cancel">Cancel</string>

    <string name="dialog_password_prompt_title_secondary">New Password</string>
    <string name="dialog_password_prompt_password_hint_secondary">New Password</string>

    <string name="login_signup_button">Sign Up</string>
    <string name="login_login_button">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>

    <string name="hint_userFirstName">First Name</string>
    <string name="hint_userLastName">Last Name</string>
    <string name="hint_userEmail">Email Address</string>
    <string name="hint_userPassword">Password</string>
    <string name="hint_userPasswordConfirm">Confirm Password</string>
    <string name="button_addUser">Sign Up</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="dialog_user_created">User Created!</string>
    <string name="dialog_user_successful">User Successfully Created! Please Sign-In to continue</string>
    <string name="dialog_ok">OK</string>
    <string name="user_incorrect_details">Incorrect Details</string>

    <string name="settings_account_details">Account Details</string>
    <string name="settings_email_title">User Email</string>
    <string name="settings_email_hint">Email</string>
    <string name="settings_password_title">User Password</string>
    <string name="settings_password_hint">Password</string>
    <string name="settings_statistics_title">Statistics</string>
    <string name="settings_statistics_total_title">Total Hillforts</string>
    <string name="settings_statistics_total_hint">0</string>
    <string name="settings_statistics_visited_title">Visited</string>
    <string name="settings_statistics_visited_hint">0</string>
    <string name="settings_logout_btn">Log Out</string>
    <string name="settings_change_password_btn">Change Password</string>

    <string name="dialog_edit_email_submit">Change</string>
    <string name="dialog_edit_email_cancel">Cancel</string>
    <string name="dialog_edit_email_hint">New Email</string>
    <string name="dialog_edit_email_title">Change Email</string>

    <string name="dialog_edit_password_submit">Change</string>
    <string name="dialog_edit_password_cancel">Cancel</string>
    <string name="dialog_edit_password_hint">New Password</string>
    <string name="dialog_edit_password_confirm_hint">Confirm New Password</string>
    <string name="dialog_edit_password_title">Change Password</string>
    <string name="title_activity_hillfort_maps">HillfortMaps</string>

    <string name="hillfort_image_placeholder">Image Placeholder</string>
    <string name="hillfort_title_placeholder">No Hillforts</string>
    <string name="hillfort_description_placeholder">There are no Hillforts currently saved</string>

    <string name="authentication_failed">You have been logged out for failing the authentication process</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
