<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="views.hillforts.HillfortsView">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/hillfortDescription"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="3"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/hillfortImage1"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_margin="16dp"
                        android:background="@color/colorBackgroundLight"
                        android:contentDescription="@string/imageDesc"
                        app:srcCompat="@drawable/logo" />

                    <ImageView
                        android:id="@+id/hillfortImage2"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@color/colorBackgroundLight"
                        android:contentDescription="@string/imageDesc"
                        app:srcCompat="@drawable/logo" />

                    <ImageView
                        android:id="@+id/hillfortImage3"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@color/colorBackgroundLight"
                        android:contentDescription="@string/imageDesc"
                        app:srcCompat="@drawable/logo" />

                    <ImageView
                        android:id="@+id/hillfortImage4"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:background="@color/colorBackgroundLight"
                        android:contentDescription="@string/imageDesc"
                        app:srcCompat="@drawable/logo" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/clearAll"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="325dp"
                android:text="@string/clear_all_text"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/visited"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:checked="false"
                android:text="@string/visited_checkbox" />


            <Button
                android:id="@+id/hillfortLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/hillfortMapLoc"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:layout_margin="16dp" />

            <EditText
                android:id="@+id/hillfortAdditionalNotes"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_hillfortAdditional_notes"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:maxLines="7"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:targetApi="o" />

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:progressTint="@color/colorPrimary"
                android:stepSize="1"
                android:theme="@style/Widget.AppCompat.RatingBar" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addHillfort"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:backgroundTint="#9149EC"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:srcCompat="@android:drawable/ic_menu_share" />

</androidx.constraintlayout.widget.ConstraintLayout>